<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">Welcome to this application!</string>
    <string name="welcome_content">In this android application, you will learn about basic knowledge of fluid mechanics, not only text content , also formula for fluid mechanics calculation. We will also include explanation of the formula for easy understanding. </string>
    <string name="app_name">Fluid Mechanics</string>
    <string name="hello_world">This is an app mainly focus on the fluid mechanics basic knowledge.</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="action_search">Search</string>

    <color name="white">#FFFFFF</color>

    <string name="scrolldown">Here you can see me when you scroll down!</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="title_activity_firsttimerun">FirstRun</string>
    <string name="nav1">About</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_first_time_run">FirstTimeRun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_t1">What is Fluid?</string>
    <string name="basic_c1">A substance in the liquid and gas phase is referred to as a fluid. A solid can resist an applied stress by deforming. WHen a constant shear stress is applied, a solid stops deorming at a fixed strain angle, whereas a fluid deforms continuously with a cerain strain rate.</string>
    <string name="basic_t2">Different between Each State</string>
    <string name="basic_c2">In a fluid at rest, the shear stress is zero because the fluid will flow under a shear stress. The molecules in a solid are arranged in a pattern and the attractive forces between molecules are large and keep the molecules at fixed postitions. In a liquid, chunks of molecules can move relative to each other, but the volume remains relatively constant because of the strong cohesive forces between the molecules. A gas expands until it fills the entire available space and does not form a free surface.</string>
    <string name="basic_t3">Properties of Fluid</string>
    <string name="basic_c3">Viscocity</string>
    <string name="pipe_title">Type of Flow</string>
    <string name="pipe_content">Fluid motions manifest themselves in many different ways. Some can be described very easily, while other require understanding of physical laws. In engineering applications, it is important to describe the fluid motions as simply as can be justified. It is the engineer s responsibility to know which simplifying assumptions can be made.</string>
    <string name="title_activity_rey_formula">ReyFormula</string>
    <string name="reyformula_title">Reynolds Number Calculator</string>
    <string name="reyformula_content">Please input the numbers.</string>
    <string name="impact_title">Impact Force in Fluid</string>
    <string name="impact_content">The general rules of statics apply to fluids at rest, but, from the definition of a fluid, there will be no shearing forces acting and, therefore, all forces (such as F in Fig. (a)) exerted between the fluid and a solid boundary must act at right angles to the boundary. If the boundary is curved (Fig. (b)), it can be considered to be composed of a series of chords on each of which a force F1, F2, . . . , Fn acts perpendicular to the surface at the section concerned. Similarly, considering any plane drawn through a body of fluid at rest (Fig. (c)), the force exerted by one portion of the fluid on the other acts at right angles to this plane.</string>
    <string name="density"><a href="http://www.google.com">Density</a></string>
    <string name="title_activity_water_jet">Water Jet</string>
    <string name="title_activity_water_nozzle">Water Nozzle</string>
    <string name="title_activity_water_detail">More Detail about Fluid</string>
    <string name="title_activity_small_quiz">Small Quiz</string>
    <string name="title_activity_turbulent_laminar">Turbulent and Laminar Flow</string>
    <string name="title_activity_uniform">Uniform</string>
    <string name="title_activity_steady">Steady</string>
    <string name="title_activity_viscosity">Viscosity</string>
    <string name="title_activity_compressibility">Compressibility</string>
    <string name="title_activity_spinner">Spinner</string>
    <string name="title_activity_water_jet_example">Water Jet Example</string>
    <string name="pipenozzle">A simple application is to find the force on the nozzle at the outlet of a pipe. Because the fluid is contracted at the nozzle forces are induced in the nozzle. Anything holding the nozzle must be strong enough to withstand these forces</string>
    <string name="title_activity_water_nozzle_example">Water Nozzle Example</string>
    <string name="title_activity_nozzle_cal">Water Nozzle Calculator</string>
    <string name="title_activity_spinner_example">Spinner Example</string>
    <string name="title_activity_spinner_calculator">Spinner Calculator</string>
    <string name="title_activity_water_density">Density</string>
    <string name="title_activity_water_viscosity">Viscosity</string>
    <string name="title_activity_water_temp">Tempreture</string>
    <string name="title_activity_water_pressure">Pressure</string>

</resources>