<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:fadingEdge="none"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/basic_t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/basic_t1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/basic_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/basic_t1"
            android:layout_below="@+id/basic_t1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/basic_c1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/basic_t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/basic_c1"
            android:layout_below="@+id/basic_c1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/basic_t2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/basic_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/basic_t2"
            android:layout_below="@+id/basic_t2"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/basic_c2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/basic_t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/basic_c2"
            android:layout_below="@+id/basic_c2"
            android:layout_marginTop="15dp"
            android:text="@string/basic_t3"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/basic_t3"
            android:layout_below="@+id/basic_t3"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:textSize="28sp" >

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="• " >
                </TextView>

                <TextView
                    android:id="@+id/density"
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/density" >
                </TextView>

               
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="• " >
                </TextView>

                <TextView
                    android:id="@+id/viscosity"
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="Viscosity" >
                </TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="• " >
                </TextView>

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="Temperature" >
                </TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:text="• " >
                </TextView>

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="Pressure" >
                </TextView>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>